<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.items.manage.AddItemFragment">

    <ImageView android:id="@+id/imageView_profilePicture"
               android:layout_width="20dp"
               android:layout_height="20dp"
               app:layout_constraintTop_toTopOf="parent"
               app:layout_constraintLeft_toLeftOf="parent"
               android:contentDescription="@string/the_users_profile_picture"

    />

    <TextView
            android:id="@+id/textView_errors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintHeight_percent="0.55"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:scrollbars="vertical"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageView_profilePicture"
            app:layout_constraintVertical_bias="0.0"/>

    <EditText
            android:id="@+id/editText_itemName"
            android:layout_width="0dp"
            app:layout_constraintWidth_percent="0.7"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:hint="@string/itemnamehint"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_errors"
            app:layout_constraintVertical_bias="0.0" android:inputType="text" android:autofillHints=""/>

    <EditText
            android:id="@+id/editText_value"
            android:layout_width="0dp"
            app:layout_constraintWidth_percent="0.7"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:hint="@string/value"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText_itemName"
            app:layout_constraintVertical_bias="0.0" android:inputType="numberDecimal" android:autofillHints=""/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/editText_value"
            app:layout_constraintBottom_toTopOf="@id/spinner_room"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/button_add_item"
            android:text="@string/select_a_room"/>
    <Spinner
            android:id="@+id/spinner_room"
            android:layout_width="0dp"
            app:layout_constraintWidth_percent="0.7"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:hint="@string/spinnerRoomHint"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText_value"
            app:layout_constraintVertical_bias="0.138"
    />
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/spinner_room"
            app:layout_constraintBottom_toTopOf="@id/spinner_type"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/button_add_item"
            android:text="@string/select_a_type"/>
    <Spinner
            android:id="@+id/spinner_type"
            android:layout_width="0dp"
            app:layout_constraintWidth_percent="0.7"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:hint="@string/spinnertypehint"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinner_room"
            app:layout_constraintVertical_bias="0.123"/>
    <Button
            android:id="@+id/button_add_item"
            android:layout_width="103dp"
            android:layout_height="315dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:backgroundTint="?colorAccent"
            android:text="@string/add_item"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="@+id/spinner_type"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/editText_itemName"
            app:layout_constraintTop_toTopOf="@+id/editText_itemName"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintWidth_percent="0.25"/>

</androidx.constraintlayout.widget.ConstraintLayout>